Eliminacion de logs necesarios

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dgaxmhaj2/image/upload/v1747551665/Perros_vnosda.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Denuncia a tu mascota perdida acá. Entre todos salimos adelante!" />
+    <meta name="author" content="Oscar Cabral" />
+    <meta name="keywords" content="perdidos, mascotas, Zárate, Campana, emergencia, reportes, denuncias, ayuda, solidaridad, inundacion, agua, inundado" />
+    <meta name="robots" content="index, follow" />
+    <title>Ciudades en emergencia</title>
   </head>
   <body>
     <div id="root"></div>
