--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="iDEUgzv1BFrawIJPpMFnKfoahkeOOOn7EZ25KkN9dXs" />
     <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dgaxmhaj2/image/upload/v1747551665/Perros_vnosda.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Denuncia a tu mascota perdida acá. Entre todos salimos adelante!" />
